<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">君德汇</string>
    <string name="app_chinesename">君德汇版本更新</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back">返回</string>
    <string name="btn_true">确认</string>
    <string name="app_id">vjinke</string>
    <string name="order_load_toast">正在加载数据，请稍候…</string>

    <!-- uitl -->
    <string name="net_fail_text">当前网络不可用，点此检查网络设置</string>
    <string name="home_transfer_reast">剩余 &lt;font color= #ff9911 &gt;%s&lt;/font&gt; 天</string>
    <string name="home_transfer_percent">&lt;font size = "35" color = #ff9911 &gt;%s&lt;/font&gt; %%</string>

    <!-- 登录 -->
    <string name="login_username">手机号/昵称</string>
    <string name="login_password">密码</string>
    <string name="login_authcode">验证码</string>
    <string name="login_getpassword">找回密码？</string>
    <string name="login_noauthcode">验证码不正确,请重新输入</string>
    <string name="login_nouserorpass">用户名或密码不正确，请重新输入</string>
    <string name="login_title">登录君德汇</string>

    <!-- 手势密码 -->
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern">绘制解锁图案</string>
    <string name="setup_gesture_pattern_again">再次绘制解锁图案</string>
    <string name="forget_gesture_code">忘记手势密码</string>
    <string name="use_other_account_login">用其他账号登录</string>
    <string name="set_gesture_pattern">绘制解锁图案</string>
    <string name="set_gesture_pattern_reason">设置手势密码，防止他人未经授权查看</string>
    <string name="set_gesture_pattern_jump">跳过</string>
    <string name="reset_gesture_code">重新设置</string>

    <!-- 修改手势密码 -->
    <string name="changegesture_loginpwd">请输入登录密码</string>
    <string name="changephone_phone">手机号：</string>
    <string name="changegesture_ok">验证</string>

    <!-- 找回密码 -->
    <string name="findpd_next">下一步</string>
    <string name="findpd_auth">短信验证码</string>
    <string name="findpd_phone">输入注册手机号</string>
    <string name="findpd_newpwd">新密码（8-16位字母数字组合）</string>
    <string name="findpd_newnickname">用户名</string>
    <string name="findpd_newpwd2">确认密码</string>
    <string name="findpd_text">密码长度在6–16个字符之间，不能包含空格</string>
    <string name="findpd_success">修改成功</string>
    <string name="findpd_null">密码不能为空，请重新输入</string>
    <string name="findpd_short">登录密码为8~16位字母数字组合</string>
    <string name="findpd_noequal">两次密码不一致，请重新输入</string>
    <string name="findpd_hasspace">密码中不能含有空格</string>
    <string name="findpd_getphoneauth">获取验证码</string>
    <string name="findpd_phoneauth">验证码</string>
    <string name="signup_time">秒后重新获取</string>

    <!-- all titles -->
    <string name="title_login">登录</string>
    <string name="title_changegesture">修改手势密码</string>
    <string name="title_logintv">登录君德汇</string>
    <string name="title_account">账户中心</string>
    <string name="title_no"></string>
    <string name="title_gestureset">设置手势密码</string>
    <string name="title_gestureunlock">请解锁</string>
    <string name="title_changepwd">修改密码</string>
    <string name="title_overseas_medical">海外医疗</string>
    <string name="title_fixed_income">固定收益</string>
    <string name="title_floating_income">浮动收益</string>
    <string name="title_investment_details">投资详情</string>
    <string name="title_product_info">产品信息</string>

    <string name="products_purchase_amount">该类产品购买金额</string>
    <string name="feed_back_content">请输入您的意见及建议，我们将为您不断改进！</string>

    <!-- all buttons-->
    <string name="btn_login_out">退出登录</string>
    <string name="btn_order">立即预约</string>

    <!--产品  固收和浮收的产品详情（产品信息）-->
    <string name="product_scale">产品规模：</string>
    <string name="investment_threshold">投资门槛：</string>
    <string name="risk_type">风险类型：</string>
    <string name="management_fee">管&#160;&#160;理&#160;&#160;费：</string>
    <string name="trust_fee">托&#160;&#160;管&#160;&#160;费：</string>
    <string name="administrator">管&#160;&#160;理&#160;&#160;人：</string>
    <string name="custodian">托&#160;&#160;管&#160;&#160;人：</string>
    <string name="subscription_amount">认购金额(万元)</string>
    <string name="performance_benchmark_year">业绩比较基准(年)</string>
    <string name="investment_scope">投资范围</string>
    <string name="risk_control_measures">风控措施</string>
    <string name="investment_highlights">投资亮点</string>


    <!--保险的产品信息页-->
    <string name="insurance_company">保险公司：</string>
    <string name="insuring_way">投保方式：</string>
    <string name="insurance_coverage">投保范围：</string>
    <string name="insurance_period">保险期间：</string>
    <string name="payment_methods">交费方式：</string>
    <string name="risk_warning">风险提醒：</string>
    <string name="graphic_details">图文详情</string>

    <!-- 投资详情页面-->
    <string name="product_name">产品名称：</string>
    <string name="product_type">产品类型：</string>
    <string name="purchase_amount">购买金额：</string>
    <string name="performance_benchmark">业绩比较基准：</string>
    <string name="product_deadline">产品期限：</string>
    <string name="net_product">产品净值：</string>
    <string name="purchase_date">购买日期：</string>
    <string name="register_date">成立日期：</string>
    <string name="interest_interval">付息间隔：</string>
    <string name="remarks">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注：</string>
    <string name="repayment_date">还款日期</string>
    <string name="interest">利息  (元)</string>
    <string name="total_principal_and_interest">本息合计  (元)</string>
    <string name="tips">说明：每期实际还款日期、金额以最终到账为准，本产品最终解释权归北京君德财富投资管理有限公司所有  (元)</string>
    <string name="annual_report">年度报告</string>
    <string name="insurance_date">投保日期：</string>
    <string name="payment_period">缴费期间：</string>
    <string name="sum_insured">保&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;额：</string>
    <string name="insurance_premium">保&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;费：</string>
    <string name="effective_date">生效日期：</string>
    <string name="renewal_date">续费日期：</string>
    <string name="insurance_applicant">投&#160;&#160;保&#160;&#160;人：</string>
    <string name="insured_person">被&#160;&#160;保&#160;&#160;人：</string>
    <string name="beneficiary">受  益  人：</string>
    <string name="bonus_date">分红日期</string>
    <string name="dividend_amount">分红金额  (元)</string>


    <!-- 帐户中心页面-->
    <string name="look_and_change_info">查看或修改个人信息</string>
    <string name="change_phone">修改手机号</string>
    <string name="gesture_cipher">手势密码</string>
    <string name="change_gesture_cipher">修改手势密码</string>
    <string name="change_login_password">修改登录密码</string>

    <!-- tel -->
    <string name="tellphone_num">01052297188</string>
    <string name="tellphone_num_format">010-5229 7188</string>
    <string name="tellphone_num_format_name">客服热线: 010-5229 7188</string>

    <string name="title_null"></string>
    <string name="title_oversea_project">海外项目</string>
    <string name="title_oversea_project_detail">项目详情</string>

    <!-- 服务模块 -->
    <string name="title_photograph">私人订制摄影盛宴</string>
    <string name="title_photograph_order">私人订制预约</string>

    <string name="title_liner">豪华邮轮游</string>
    <string name="title_liner_order">豪华邮轮游预约</string>

    <string name="title_oversea_asset">海外资产配置</string>
    <string name="title_oversea_house_order">海外房产预约</string>

    <string name="title_hospital">绿通就医</string>
    <string name="title_hospital_order">掌上预约国内专家号</string>

    <string name="title_genetic">基因检测</string>
    <string name="title_genetic_order">预约顶级医疗服务</string>

    <string name="title_golf">高尔夫球场地</string>
    <string name="title_golf_order">高尔夫球场地预约</string>

    <string name="title_plane">公务机包机</string>
    <string name="title_plane_order">公务机包机预约</string>

    <string name="title_overseas_medical_service">海外医疗</string>
    <string name="title_overseas_medical_order">海外医疗预约</string>

    <!-- 海外医疗页项目标题 -->
    <string name="title_health_check">海外体检</string>
    <string name="title_oversea_hospital">海外就医</string>
    <string name="title_international_consultation">国际远程会诊</string>

    <!-- 更多模块中的服务预约列表-->
    <string name="title_service_order_all"> 全部</string>
    <string name="title_service_order_hospital"> 绿通就医</string>
    <string name="title_service_order_genetic"> 基因检测</string>
    <string name="title_service_order_golf"> 高尔夫球场地</string>
    <string name="title_service_order_airplane"> 公务机包机</string>
    <string name="title_service_order_liner">豪华邮轮游</string>
    <string name="title_service_order_oversea_asset"> 海外资产配置</string>
    <string name="title_service_order_overseas_medical"> 海外医疗</string>
    <string name="title_service_order_photography">私人订制摄影盛宴</string>


    <string name="tips_service_booking_detail"> 请保持电话畅通我们会尽快与您进行联系！</string>

    <!-- 私人定制摄影相关文字 -->
    <string name="introduction_photography">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;君德财富联手七彩云南顶级珠宝、YST时尚摄影团队，为尊贵的您打造一场私人订制的摄影盛宴。让财富与奢华碰撞，让高定服饰与珠宝融合，留下一个最美的身影，述说一个故事。</string>
    <string name="introduction_photography2">在这里有专业的造型团队、以用心的服务、时尚的视角，定义美，诠释爱！</string>
    <string name="title_experience_project">预约免费体验，您可尊享：</string>
    <string name="experience_project1">【化妆】提供专属化妆造型3组</string>
    <string name="experience_project2">【拍摄】知名签约摄影师拍摄3组</string>
    <string name="experience_project3">【风格】清新自然、成熟性感、高贵典雅</string>
    <string name="experience_project4">【服饰】知名高定服饰品牌</string>
    <string name="experience_project5">【珠宝】珍藏级各类珠宝任选2-3套搭配拍摄</string>
    <string name="experience_project6">【赠品】十寸精雕版画1台，数码精修底片3张</string>
    <string name="experience_project7">【提示】可自带私服2套，彰显自己的个性品位</string>
    <string name="photography_team">摄影团队</string>
    <string name="photography_production">往期作品</string>
    <string name="Photographer1">摄影师<b>Michael</b></string>
    <string name="Photographer2">摄影师<b>Jason</b></string>
    <string name="Photographer3">造型师<b>Lisa</b></string>
    <string name="Photographer4">造型师<b>Jenny</b></string>
    <string name="Photographer5">珠宝设计师<b>陈瑾</b></string>

    <string name="layout_photographer3_item1"> 从业6年 </string>
    <string name="layout_photographer3_item2">国家注册高级化妆师</string>
    <string name="layout_photographer3_item3"> 在<b>&#060;&#060;大学一年级&#062;&#062;</b>等电视剧中担任造型指导 </string>
    <string name="layout_photographer3_item4"> 中央电视台合作化妆师 </string>
</resources>