<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_service_title"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@color/red4">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="45dp"
            android:text="服务"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_service_title"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 私人定制摄影盛宴 -->
            <RelativeLayout
                android:id="@+id/rl_photograph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:minHeight="120dp">

                <ImageView
                    android:id="@+id/iv_photograph"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>

                <TextView
                    style="@style/allServices_title"
                    android:text="@string/title_photograph"/>

                <TextView
                    style="@style/allServices_order"
                    android:text="@string/title_photograph_order"/>
            </RelativeLayout>

            <View
                style="@style/v_line_style"
                android:layout_alignParentBottom="true"/>

            <!-- 豪华邮轮 -->
            <RelativeLayout
                android:id="@+id/rl_liner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="120dp">

                <ImageView
                    android:id="@+id/iv_liner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>

                <TextView
                    style="@style/allServices_title"
                    android:text="@string/title_liner"/>

                <TextView
                    style="@style/allServices_order"
                    android:text="@string/title_liner_order"/>
            </RelativeLayout>

            <View
                style="@style/v_line_style"
                android:layout_alignParentBottom="true"/>

            <!-- 海外资产配置 -->
            <RelativeLayout
                android:id="@+id/rl_oversea_asset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="120dp">

                <ImageView
                    android:id="@+id/iv_asset"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>

                <TextView
                    style="@style/allServices_title"
                    android:text="@string/title_oversea_asset"/>

                <TextView
                    style="@style/allServices_order"
                    android:text="@string/title_oversea_house_order"/>
            </RelativeLayout>

            <View
                style="@style/v_line_style"
                android:layout_alignParentBottom="true"/>

            <!-- 绿通就医 -->
            <RelativeLayout
                android:id="@+id/rl_hospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="120dp">

                <ImageView
                    android:id="@+id/iv_hospital"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>

                <TextView
                    style="@style/allServices_title"
                    android:text="@string/title_hospital"/>

                <TextView
                    style="@style/allServices_order"
                    android:text="@string/title_hospital_order"/>
            </RelativeLayout>

            <View
                style="@style/v_line_style"
                android:layout_alignParentBottom="true"/>

            <!-- 基因检测 -->
            <RelativeLayout
                android:id="@+id/rl_genetic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="120dp">

                <ImageView
                    android:id="@+id/iv_genetic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>

                <TextView
                    style="@style/allServices_title"
                    android:text="@string/title_genetic"/>

                <TextView
                    style="@style/allServices_order"
                    android:text="@string/title_genetic_order"/>
            </RelativeLayout>

            <View
                style="@style/v_line_style"
                android:layout_alignParentBottom="true"/>

            <!-- 高尔夫（暂时去掉了） -->
            <RelativeLayout
                android:id="@+id/rl_golf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="120dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iv_golf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>

                <TextView
                    style="@style/allServices_title"
                    android:text="string/title_golf"/>

                <TextView
                    style="@style/allServices_order"
                    android:text="@string/title_golf_order"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <View
                style="@style/v_line_style"
                android:layout_alignParentBottom="true"
                android:visibility="gone"/>

            <!-- 公务机包机 -->
            <RelativeLayout
                android:id="@+id/rl_plane"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="120dp">

                <ImageView
                    android:id="@+id/iv_plane"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>

                <TextView
                    style="@style/allServices_title"
                    android:text="@string/title_plane"/>

                <TextView
                    style="@style/allServices_order"
                    android:text="@string/title_plane_order"/>
            </RelativeLayout>

            <View
                style="@style/v_line_style"
                android:layout_alignParentBottom="true"/>

            <!-- 海外医疗 -->
            <RelativeLayout
                android:id="@+id/rl_overseas_medical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="120dp">

                <ImageView
                    android:id="@+id/iv_overseas_medical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>

                <TextView
                    style="@style/allServices_title"
                    android:text="@string/title_overseas_medical_service"/>

                <TextView
                    style="@style/allServices_order"
                    android:text="@string/title_overseas_medical_order"/>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>