<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/id_account_txt_title"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@color/red4">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:src="@drawable/back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="服务预约"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_type"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="全部"
            android:textColor="@color/txt_orange_new"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/iv_select"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tv_type"
            android:background="@drawable/triangle_down_fill"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/gray_light"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.handmark.pulltorefresh.library.PullToRefreshListView
            xmlns:ptr="http://schemas.android.com/apk/res-auto"
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/gray_light"
            android:dividerHeight="1dp"
            android:scrollbars="none"
            ptr:ptrAnimationStyle="flip"
            ptr:ptrMode="both"/>

        <View
            android:id="@+id/v_hidden"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#66000000"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/ll_hidden"
            android:layout_width="match_parent"
            android:layout_height="308dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_0"
                        style="@style/product_text"
                        android:text="@string/title_service_order_all"/>

                    <View
                        style="@style/product_text_line"/>

                    <TextView
                        android:id="@+id/tv_1"
                        style="@style/product_text"
                        android:text="@string/title_service_order_hospital"/>

                    <View
                        style="@style/product_text_line"/>

                    <TextView
                        android:id="@+id/tv_2"
                        style="@style/product_text"
                        android:text="@string/title_service_order_genetic"/>

                    <View
                        style="@style/product_text_line"/>

                    <TextView
                        android:id="@+id/tv_3"
                        style="@style/product_text"
                        android:text="@string/title_service_order_golf"
                        android:visibility="gone"/>

                    <View
                        style="@style/product_text_line"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/tv_4"
                        style="@style/product_text"
                        android:text="@string/title_service_order_airplane"/>

                    <View
                        style="@style/product_text_line"/>

                    <TextView
                        android:id="@+id/tv_5"
                        style="@style/product_text"
                        android:text="@string/title_service_order_liner"/>

                    <View
                        style="@style/product_text_line"/>

                    <TextView
                        android:id="@+id/tv_6"
                        style="@style/product_text"
                        android:text="@string/title_service_order_oversea_asset"/>

                    <View
                        style="@style/product_text_line"/>

                    <TextView
                        android:id="@+id/tv_7"
                        style="@style/product_text"
                        android:text="@string/title_service_order_overseas_medical"/>

                    <View
                        style="@style/product_text_line"/>

                    <TextView
                        android:id="@+id/tv_8"
                        style="@style/product_text"
                        android:text="@string/title_service_order_photography"/>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>